# wechat

./: .gitignore
ChatServer/: CServer.cpp  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ChatServiceImpl.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.h  config.ini  const.h  message.proto  start.bat
ChatServer2/: AsioIOServicePool.cpp  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServer.sln  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ChatServiceImpl.h  ConfigMgr.cpp  ConfigMgr.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  UserMgr.cpp  config.ini  const.h  data.h  message.pb.h  message.proto
GataServer/: CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GataServer.cpp  GataServer.vcxproj  GataServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.h  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  message.pb.cc  message.pb.h
GateServer/: AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  GataServer.cpp  GataServer.sln  GataServer.vcxproj  HttpConnection.cpp  MysqlDao.cpp  StatusGrpcClient.cpp  const.h  message.pb.cc
StatusServer/: CMakeLists.txt  ChatGrpcClient.h  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  StatusServer.cpp  const.h  (+6 more)
(+115 files in other folders)
